syntax = "proto2";

package uk.gov.homeoffice.drt.protobuf.messages;

message PredictionLongMessage {
    optional int64 updatedAt = 1;
    optional int64 value = 2;
}
